<resources>
    <string name="app_name">The Egg Game</string>
    <string name="google_maps_key">AIzaSyA0X_TUK3iYed_8q7tiGzup3TworGgYEfo</string>

    <string name="h2p">How to play</string>
    <string name="least_one_person_per_team">Arrange at least 1 team per team</string>
    <string name="player_not_ready">The player is not ready yet</string>
    <string name="error_room_name">Please enter room name</string>
    <string name="full">Full</string>
    <string name="username_same_current">Username is same as the current player</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="login_incorrect">Please enter a valid username and password</string>
    <string name="start_game">Start Game</string>
    <string name="fight_game">Fight Game</string>
    <string name="welcome">Welcome to The Egg Game</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Re - password</string>
    <string name="logo">Logo</string>
    <string name="single_player">Single player</string>
    <string name="multi_player">Multi player</string>
    <string name="go">Go</string>
    <string name="mission">Mission</string>
    <string name="rank">Rank</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="ready">Ready</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="exit_message">Do you want to exit the game?</string>
    <string name="error_username">Please enter username</string>
    <string name="error_password">Please enter password</string>
    <string name="error_re_password">Please enter Re - password</string>
    <string name="error_name">Please enter name</string>
    <string name="error_username_less">Please enter your username no less than 4 characters</string>
    <string name="error_password_less">Please enter your password no less than 4 characters</string>
    <string name="error_password_not_match">Passwords do not match</string>
    <string name="change_password">Change password</string>
    <string name="change_profile">Change profile</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="successfully">Successfully</string>
    <string name="create_room">Create room</string>
    <string name="time">Time</string>
    <string name="the_egg_game">The Egg Game</string>
    <string name="time_out">Time out</string>
    <string name="give_up">Give up</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="fifty">50</string>
    <string name="hundred">100</string>
    <string name="logout">Logout</string>
    <string name="end_game">End game</string>
    <string name="player">Player</string>
    <string name="name">Name</string>
    <string name="level">Level : %1$d</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sound_amp_music"><![CDATA[Sound & Music]]></string>
    <string name="how_to_play">วิธีการเล่น</string>
    <string name="detail_single_player">\t\t\tแบบเล่นคนเดียว คือ การเก็บไอเทมตามพิกัดต่างๆ เพื่อเพิ่มเลเวล เมื่อผู้เล่นได้เดินไปถึงตามพิกัดนั้น ในระยะทางห่างจากไอเทมน้อยกว่า 100 เมตร เกมจะทำการเก็บไอเทมให้อัตโนมัติ และหากผู้เล่นอยู่ห่างจากไอเทมเป็นระยะทาง 2 กิโลเมตร เกมจะสุ่มไอเทมออกมาใหม่ เพื่อให้ผู้เล่น ได้เก็บไอเทมในบริเวณนั้นแทน</string>
    <string name="detail_multi_player">\t\t\tแบบเล่นเป็นทีม คือ ผู้เล่นต้องสร้างห้องหรือเข้าร่วมห้องเพื่อจัดทีมการแข่งขัน โดยการแบ่งเป็น 2 ทีม เพื่อแข่งขันกันในการเก็บไอเทมให้ครบ 5 ไอเทม ภายในระยะเวลา 15 นาที ถ้าหาก 2 ทีม อยู่ในพิกัดที่ใกล้กันจะต้องต่อสู้กันเพื่อแย่งชิงไอเทม หากทีมไหนแพ้จะต้องเสียไอเทมที่เก็บก่อนหน้าให้กับทีมที่ชนะ ผู้เล่นที่เป็นฝ่ายชนะจะได้รับโบนัสเพิ่ม และได้เล่นเกมต่อไปเพื่อสุ่มแต้มเพิ่มเลเวล</string>
    <string name="delivery_login">Delivery login</string>
    <string name="mission_single">Mission single</string>
    <string name="mission_multi">Mission multi</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="team">Team</string>
    <string name="score">Score</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="always">Always</string>
    <string name="bonus">Bonus</string>
    <string name="backpack">Backpack</string>
    <string name="experience_point">Experience point : %1$d</string>
    <string name="egg_i">Egg I : %1$d</string>
    <string name="egg_ii">Egg II : %1$d</string>
    <string name="egg_iii">Egg III : %1$d</string>
    <string name="dru_title">DRU</string>
    <string name="dru_snippet">Dhonburi rajabhat university</string>
    <string name="exp">Experience point</string>
    <string name="mystery_box">Mystery Box</string>
    <string name="mystery_item">Mystery Item</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

</resources>
