<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayout"
        tools:context=".ui.main.MainActivity">

    <LinearLayout
            style="@style/LinearLayoutMain"
            android:layout_centerInParent="true">

        <ImageView
                style="@style/ImageViewLogo"
                android:contentDescription="@string/logo" />

        <TextView
                style="@style/TextViewLarge"
                android:text="@string/app_name"
                android:textSize="@dimen/textViewMain" />

        <GridLayout
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/large"
                android:columnCount="2"
                android:rowCount="2">

            <ImageView
                    android:id="@+id/mIvProfile"
                    style="@style/ImageViewPlayer"
                    android:layout_rowSpan="2"
                    android:contentDescription="@string/player" />

            <TextView
                    android:id="@+id/mTvName"
                    style="@style/TextView"
                    android:layout_marginStart="@dimen/large"
                    android:text="@string/name" />

            <TextView
                    android:id="@+id/mTvLevel"
                    style="@style/TextViewSmall"
                    android:layout_marginStart="@dimen/large"
                    android:text="@string/level" />
        </GridLayout>

        <Button
                android:id="@+id/mBtSingle"
                style="@style/Button"
                android:layout_width="@dimen/buttonWidthMain"
                android:layout_height="@dimen/buttonHeightMain"
                android:text="@string/single_player"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
                android:id="@+id/mBtMulti"
                style="@style/Button"
                android:layout_width="@dimen/buttonWidthMain"
                android:layout_height="@dimen/buttonHeightMain"
                android:text="@string/multi_player"
                android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
            style="@style/LinearLayoutHorizontal"
            android:layout_alignParentBottom="true">

        <LinearLayout style="@style/LinearLayoutButton">

            <ImageView
                    android:id="@+id/mIvMission"
                    style="@style/ImageViewPlayer"
                    android:contentDescription="@string/mission"
                    android:src="@drawable/ic_mission" />

            <TextView
                    style="@style/TextViewSmall"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mission" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutButton">

            <ImageView
                    android:id="@+id/mIvRank"
                    style="@style/ImageViewPlayer"
                    android:contentDescription="@string/rank"
                    android:src="@drawable/ic_rank_small" />

            <TextView
                    style="@style/TextViewSmall"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rank" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutButton">

            <ImageView
                    android:id="@+id/mIvAbout"
                    style="@style/ImageViewPlayer"
                    android:contentDescription="@string/about"
                    android:src="@drawable/ic_h2p" />

            <TextView
                    style="@style/TextViewSmall"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/about" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutButton">

            <ImageView
                    android:id="@+id/mIvSetting"
                    style="@style/ImageViewPlayer"
                    android:contentDescription="@string/setting"
                    android:src="@drawable/ic_setting" />

            <TextView
                    style="@style/TextViewSmall"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/setting" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
