<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/MatchWrap"
        android:orientation="vertical"
        android:padding="@dimen/large">

    <GridLayout
            style="@style/MatchWrap"
            android:background="@drawable/shape_team_a"
            android:columnCount="3"
            android:padding="@dimen/large"
            android:rowCount="2">

        <TextView
                android:id="@+id/tvTeamA"
                style="@style/TextViewLarge"
                android:layout_columnSpan="3"
                android:layout_gravity="center_horizontal"
                android:text="@string/team" />

        <TextView
                style="@style/TextView"
                android:text="@string/team_a" />

        <TextView
                android:id="@+id/tvScoreA"
                style="@style/TextView"
                android:layout_columnSpan="2"
                android:layout_gravity="end"
                android:text="@string/score" />
    </GridLayout>

    <GridLayout
            style="@style/MatchWrap"
            android:layout_marginTop="@dimen/large"
            android:background="@drawable/shape_team_b"
            android:columnCount="3"
            android:padding="@dimen/large"
            android:rowCount="1">

        <TextView
                android:id="@+id/tvTeamB"
                style="@style/TextViewLarge"
                android:layout_columnSpan="3"
                android:layout_gravity="center_horizontal"
                android:text="@string/team" />

        <TextView
                style="@style/TextView"
                android:text="@string/team_b" />

        <TextView
                android:id="@+id/tvScoreB"
                style="@style/TextView"
                android:layout_columnSpan="2"
                android:layout_gravity="end"
                android:text="@string/score" />
    </GridLayout>

    <Button
            android:id="@+id/btEndGame"
            style="@style/Button"
            android:layout_gravity="end"
            android:text="@string/end_game" />

</LinearLayout>
