<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/mEtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit"
                android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
            style="@style/MatchWrap"
            android:layout_marginTop="@dimen/large"
            android:columnCount="3"
            android:rowCount="1">

        <TextView
                style="@style/TextView"
                android:text="@string/gender" />

        <RadioGroup
                style="@style/WrapWrap"
                android:layout_columnWeight="1"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/mRbMale"
                    style="@style/WrapWrap"
                    android:layout_marginStart="@dimen/medium"
                    android:checked="true"
                    android:text="@string/male" />

            <RadioButton
                    android:id="@+id/mRbFemale"
                    style="@style/WrapWrap"
                    android:layout_marginStart="@dimen/medium"
                    android:text="@string/female" />
        </RadioGroup>
    </GridLayout>

    <ImageView
            android:id="@+id/mIvProfile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_player" />

    <Button
            android:id="@+id/mBtSave"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_profile" />
</LinearLayout>
